manejo de contraseña con React Hook Form y maquetado de paso 3

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "bcryptjs": "^3.0.2",
     "lucide-react": "^0.511.0",
     "mysql2": "^3.14.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.7"
   },
