--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Archivos sensibles
+.env
+*.env
+
 # Logs
 logs
 *.log
@@ -11,7 +15,7 @@ node_modules
 dist
 dist-ssr
 *.local
-.env
+
 
 # Editor directories and files
 .vscode/*
